--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>Document</title>
   </head>
   <body>
+    <ul>
+      <li>"nova" - Para adicionar uma nova tarefa.</li>
+      <li>"lista" - Para verificar a lista de tarefas.</li>
+      <li>"deletar" - Para deletar alguma tarefa expecifica.</li>
+      <li>"sair" - Para encerrar o programa.</li>
+    </ul>
     <script src="app.js"></script>
   </body>
 </html>
