--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
   </head>
   <body>
+    <h1>Lista de tarefas</h1>
     <ul>
       <li>"nova" - Para adicionar uma nova tarefa.</li>
       <li>"lista" - Para verificar a lista de tarefas.</li>
